--- a/utils_py/local_dash/README
+++ b/utils_py/local_dash/README
@@ -28,7 +28,16 @@ $ cros_sdk
 (cr) $ ./dash_template/result_viewer
 
 -view the results (from browser):
-http://localhost:8080/
+http://hostname:8080/
+
+-[optional dns workaround if unable to resolve hostname]
+(cr) $ ./dash-template/result_viewer --run-host=0.0.0.0
+ [then view from http://w.x.y.z:8080/
+  where w.x.y.z is the ip of the host system]
+
+-[optionally iterate]
+ (cr) $ ./local_dash
+ [result_viewer, already running, auto-refreshes]
 
 ADVANCED:
 
